# penguin-optimization

./: .gitignore  Cargo.toml  Makefile  README.md  dependencies  instructions.md  log.txt  meme_inputs.txt  output-test.py  pyproject.toml  reflection.md  rustfmt.toml  team.txt
.github/workflows/: rustfmt.yaml
inputs/: large.in  medium.in  small.in  tiny.in
inputs/small/: 068.in  152.in
inputs/test/: large.in  small.in  tiny.in  trivial.in
outputs/: medium.out  small.out  small_lp.out  tiny.out  trivial.out
outputs/benchmarks/: large_benchmark.out  medium_benchmark.out  small_benchmark.out  tiny_benchmark.out
outputs/large/: 001.out  002.out  003.out  004.out  005.out  006.out  007.out  008.out  009.out  010.out  010copy.out  011.out  012.out  013.out  014.out  015.out  016.out  017.out  018.out  019.out  020.out  021.out  022.out  023.out  024.out  025.out  026.out  027.out  028.out  029.out  030.out  031.out  032.out  033.out  034.out  035.out  036.out  037.out  038.out  039.out  (+200 more)
outputs/medium/: 001.out  002.out  003.out  004.out  005.out  006.out  007.out  008.out  009.out  010.out  011.out  012.out  013.out  014.out  015.out  016.out  017.out  018.out  019.out  020.out  021.out  022.out  023.out  024.out  025.out  026.out  027.out  028.out  029.out  030.out  031.out  032.out  033.out  034.out  035.out  036.out  037.out  038.out  039.out  040.out  (+201 more)
outputs/small/: 001.out  002.out  003.out  004.out  005.out  006.out  007.out  008.out  009.out  010.out  011.out  012.out  013.out  014.out  015.out  016.out  017.out  018.out  019.out  020.out  021.out  022.out  023.out  024.out  025.out  026.out  027.out  028.out  029.out  030.out  031.out  032.out  033.out  034.out  035.out  036.out  037.out  038.out  039.out  040.out  (+200 more)
outputs/test/: large.out  tiny.out  trivial.out
ppp/: instance.py  minlp.py  point.py  solution.py  solve.py
ppp/gui/: canvas.py  main.py  main_gui.py
preprocess/penalty/: small.txt
preprocess/service/: medium.txt  small.txt
python/: visualize.py
python/inputs/: large.in
src/: annealing.rs  api.rs  grid.rs  lp.rs  lp_v2.rs  main.rs  op_en.rs  point.rs  solvers.rs
(+5 files in other folders)
