[package]
name = "penguin-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cargo-debug = "0.3.0"
good_lp = {version = "1.3.2", features = ["coin_cbc", "lp-solvers"]}
stopwatch = "0.0.7"
rand = "0.8.5"
# lp-solvers = "0.0.4"
# minilp = "0.2.2"
# highs = "1.2.1"
# linregress = "0.4.4"