[package]
name = "penguin-project"
version = "0.1.0"
authors = ["Daniel Endraws <daniel.endraws@berkeley.edu>", "Noah Adhikari <noahadhikari@berkeley.edu", "Meshan Khosla <mkhosla@berkeley.edu>"]
description="CS 170 - Solver for penguin problem"
readme="README.md"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
good_lp = {version = "1.3.2", features = ["coin_cbc", "lp-solvers"]}
stopwatch = "0.0.7"
rand = "0.8.5"
clap = { version = "3.1.12", features = ["derive"] }
phf = { version = "0.10", features = ["macros"] }
reqwest = { version = "0.11.10", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }
lazy_static = "1.4.0"
regex = "1.5.5"
num_cpus = "1.13.1"
rayon = "1.5.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10.3"